--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <main
         class="z-0 bg-[#ffefd3] w-5/6 xl:max-w-5xl rounded-lg p-10 shadow-md border-t-4 border-[#fcbf49] flex flex-col mt-16">
         <header class="flex flex-col md:flex-row justify-between w-full border-b border-b-[#d8ab51] pb-3">
-            <div>
-                <h2 class="text-base md:text-5xl font-bold">Salma Bader</h2>
+            <div class="mb-5">
+                <h2 class="text-3xl md:text-5xl font-bold">Salma Bader</h2>
                 <p class="text-sm md:text-md leading-relaxed">Bachelor of Science in Computer Science</p>
             </div>
 
@@ -51,7 +51,6 @@
                         </svg>
                     </span>
                     <a href="mailto:salmabader.cs@gmail.com">salmabader.cs@gmail.com</a>
-
                 </div>
 
                 <div>
