--- a/index.html
+++ b/index.html
@@ -189,13 +189,13 @@
 
             </div>
 
-            <div class="lg:w-4/6 p-3 px-14">
+            <div class="lg:w-4/6 p-3 lg:px-14">
                 <!-- skills -->
                 <div class="border-b border-[#d8ab51] pb-4">
-                    <p class="font-semibold text-2xl">Skills</p>
-                    <div class="flex gap-10 justify-between">
+                    <p class="font-semibold md:text-2xl text-xl">Skills</p>
+                    <div class="flex sm:flex-row flex-col justify-between">
                         <div>
-                            <p class="text-lg font-medium">Personal skills</p>
+                            <p class="md:text-lg text-md font-medium">Personal skills</p>
                             <ul>
                                 <li>− Communication skills</li>
                                 <li>− Excellent teamwork</li>
@@ -204,7 +204,7 @@
 
                         </div>
                         <div>
-                            <p class="text-lg font-medium">Technical skills</p>
+                            <p class="md:text-lg text-md font-medium md:mt-0 mt-3">Technical skills</p>
                             <ul>
                                 <li>− Database design</li>
                                 <li>− Technical writing</li>
@@ -216,7 +216,7 @@
 
                 <!-- Programming Languages -->
                 <div class="border-b border-[#d8ab51] py-4">
-                    <p class="font-semibold text-2xl">Programming Languages</p>
+                    <p class="font-semibold md:text-2xl text-xl">Programming Languages</p>
                     <div class="flex flex-col">
                         <div class="flex justify-between w-full">
                             <p>C++</p>
@@ -235,7 +235,7 @@
 
                 <!-- Program and Software -->
                 <div class="border-b border-[#d8ab51] py-4">
-                    <p class="font-semibold text-2xl">Program and Software</p>
+                    <p class="font-semibold md:text-2xl text-xl">Program and Software</p>
                     <div class="flex flex-col">
                         <div class="flex justify-between w-full">
                             <p>VS code</p>
@@ -252,7 +252,7 @@
 
                 <!-- Experience -->
                 <div class="border-b border-[#d8ab51] py-4">
-                    <p class="font-semibold text-2xl mb-1">Experience</p>
+                    <p class="font-semibold md:text-2xl text-xl mb-1">Experience</p>
                     <div class="flex flex-col">
                         <div class="flex flex-col w-full">
                             <div class="flex justify-between">
