--- a/index.html
+++ b/index.html
@@ -272,14 +272,15 @@
                     <p class="font-semibold md:text-2xl text-xl mb-1">Experience</p>
                     <div class="flex flex-col">
                         <div class="flex flex-col w-full">
-                            <div class="flex justify-between">
+                            <div class="flex md:flex-row flex-col justify-between">
                                 <p class="font-semibold text-yellow-700">Dolf Technologies Co.</p>
-                                <p class="text-xs text-gray-500">Almost 3 months</p>
+                                <p class="text-xs text-gray-500">2 months | 2022</p>
                             </div>
-                            <div class="flex bg-gray-100 text-gray-800 text-xs font-medium px-2.5 py-0.5 rounded mr-2">
+                            <div
+                                class="w-fit bg-gray-50 text-gray-800 text-xs font-medium px-2.5 py-0.5 rounded-r-xl mr-2 border border-gray-200">
                                 <p>COOP training</p>
                             </div>
-                            <div>
+                            <div class="mt-1">
                                 <p>E-content development</p>
                             </div>
                         </div>
