--- a/index.html
+++ b/index.html
@@ -234,36 +234,28 @@
                 <!-- Programming Languages -->
                 <div class="border-b border-[#d8ab51] py-4">
                     <p class="font-semibold md:text-2xl text-xl">Programming Languages</p>
-                    <div class="flex flex-col">
-                        <div class="flex justify-between w-full">
-                            <p>C++</p>
-                            <p>Java</p>
-                            <p>HTML/CSS</p>
-                            <p>SQL</p>
-                        </div>
-                        <div class="flex justify-between w-full">
-                            <p>PHP</p>
-                            <p>JavaScript</p>
-                            <p>Python</p>
-                            <p>Prolog</p>
-                        </div>
+                    <div class="grid md:grid-cols-4 grid-cols-3 mt-2">
+                        <p>C++</p>
+                        <p>Java</p>
+                        <p>HTML/CSS</p>
+                        <p>SQL</p>
+                        <p>PHP</p>
+                        <p>JavaScript</p>
+                        <p>Python</p>
+                        <p>Prolog</p>
                     </div>
                 </div>
 
                 <!-- Program and Software -->
                 <div class="border-b border-[#d8ab51] py-4">
                     <p class="font-semibold md:text-2xl text-xl">Program and Software</p>
-                    <div class="flex flex-col">
-                        <div class="flex justify-between w-full">
-                            <p>VS code</p>
-                            <p>Android Studio</p>
-                            <p>MatLab</p>
-                        </div>
-                        <div class="flex justify-between w-full">
-                            <p>Adobe Photoshop</p>
-                            <p>Figma</p>
-                            <p>Balasmiq/Axure</p>
-                        </div>
+                    <div class="grid md:grid-cols-3 grid-cols-2 mt-2">
+                        <p>VS code</p>
+                        <p>Android Studio</p>
+                        <p>MatLab</p>
+                        <p>Adobe Photoshop</p>
+                        <p>Figma</p>
+                        <p>Balasmiq/Axure</p>
                     </div>
                 </div>
 
