--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <div class="grid md:grid-cols-3 grid-cols-2 mt-2">
                         <p>VS code</p>
                         <p>Android Studio</p>
-                        <p>Adobe Photoshop</p>
+                        <p>Photoshop</p>
                         <p>MatLab</p>
                         <p>Figma</p>
                         <p>Balasmiq/Axure</p>
