--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
                 </div>
 
                 <!-- Experience -->
-                <div class="border-b border-[#d8ab51] py-4">
+                <div class="py-4">
                     <p class="font-semibold md:text-2xl text-xl mb-1">Experience</p>
                     <div class="flex flex-col">
                         <div class="flex flex-col w-full">
-                            <div class="flex flex-row justify-between">
+                            <div class="flex md:flex-row flex-col justify-between">
                                 <p class="font-semibold text-yellow-700">Dolf Technologies Co.</p>
                                 <div
                                     class="flex items-center w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
