--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
 
+    <link rel="shortcut icon" href="personal_photo2.png" type="image/x-icon">
 
     <title>Salma's Resume</title>
 
@@ -263,21 +264,50 @@
                 <div class="py-4">
                     <p class="font-semibold md:text-2xl text-xl mb-1">Experience</p>
                     <div class="flex flex-col">
-                        <div class="flex flex-col w-full">
-                            <div class="flex md:flex-row flex-col justify-between">
-                                <p class="font-semibold text-yellow-700">Dolf Technologies Co.</p>
-                                <div
-                                    class="flex items-center w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
-                                    <p>COOP training</p>
-                                </div>
+                        <div class="grid grid-cols-2 items-center w-full">
+                            <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Dolf Technologies Co.</p>
+                            <div
+                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
+                                <p>COOP training</p>
                             </div>
-                            <p class="text-xs text-gray-500">2 months | 2022</p>
-
-                            <div class="mt-1">
-                                <p>E-content development</p>
-                            </div>
+                            <p class="text-xs text-gray-500 order-1 md:order-2">2 months | 2022</p>
                         </div>
+                        <p>E-content development</p>
 
+                        <div class="grid grid-cols-2 w-full mt-6">
+                            <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Enlighten</p>
+                            <div
+                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
+                                <p>Leader and UI design</p>
+                            </div>
+                            <p class="text-xs text-gray-500 order-1 md:order-2">4 months | 2021</p>
+                        </div>
+                        <p class="text-justify">Android application that serves IAU students, as it provides direct
+                            communication between the
+                            student with other students who can explain some of the subjects and provide assistance. The
+                            application is programmed using the Java and XML languages.</p>
+
+                        <div class="grid grid-cols-2 w-full mt-6">
+                            <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Perfume Expert</p>
+                            <div
+                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
+                                <p>Leader</p>
+                            </div>
+                            <p class="text-xs text-gray-500 order-1 md:order-2">4 months | 2021</p>
+                        </div>
+                        <p class="text-justify">A simple program programmed using the Prolog language. Suggests the
+                            appropriate fragrance based on the user's answers to some questions.</p>
+
+                        <div class="grid grid-cols-2 w-full mt-6">
+                            <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">CakeAway</p>
+                            <div
+                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
+                                <p>Leader and UI design</p>
+                            </div>
+                            <p class="text-xs text-gray-500 order-1 md:order-2">4 months | 2020</p>
+                        </div>
+                        <p class="text-justify">Created a complete online shopping web system that includes front-end
+                            and back-end using HTML, CSS, PHP, and JavaScript.</p>
                     </div>
                 </div>
 
