--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <div class="grid grid-cols-2 items-center w-full">
                             <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Dolf Technologies Co.</p>
                             <div
-                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
+                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
                                 <p>COOP training</p>
                             </div>
                             <p class="text-xs text-gray-500 order-1 md:order-2">2 months | 2022</p>
@@ -277,7 +277,7 @@
                         <div class="grid grid-cols-2 w-full mt-6">
                             <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Enlighten</p>
                             <div
-                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
+                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
                                 <p>Leader and UI design</p>
                             </div>
                             <p class="text-xs text-gray-500 order-1 md:order-2">4 months | 2021</p>
@@ -290,7 +290,7 @@
                         <div class="grid grid-cols-2 w-full mt-6">
                             <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Perfume Expert</p>
                             <div
-                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
+                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
                                 <p>Leader</p>
                             </div>
                             <p class="text-xs text-gray-500 order-1 md:order-2">4 months | 2021</p>
@@ -301,7 +301,7 @@
                         <div class="grid grid-cols-2 w-full mt-6">
                             <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">CakeAway</p>
                             <div
-                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs font-medium px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
+                                class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
                                 <p>Leader and UI design</p>
                             </div>
                             <p class="text-xs text-gray-500 order-1 md:order-2">4 months | 2020</p>
