--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
             </div>
 
-            <div class="lg:w-4/6 lg:px-7">
+            <div class="lg:w-4/6 p-3 lg:px-10">
                 <!-- skills -->
                 <div class="border-b border-[#d8ab51] pb-4">
                     <p class="font-semibold md:text-2xl text-xl">Skills</p>
@@ -278,7 +278,7 @@
                             <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Enlighten</p>
                             <div
                                 class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
-                                <p>Leader and UI design</p>
+                                <p>Leader, UI design</p>
                             </div>
                             <p class="text-xs text-gray-500 order-1 md:order-2">4 months | 2021</p>
                         </div>
@@ -302,7 +302,7 @@
                             <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">CakeAway</p>
                             <div
                                 class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
-                                <p>Leader and UI design</p>
+                                <p>Leader, UI design</p>
                             </div>
                             <p class="text-xs text-gray-500 order-1 md:order-2">4 months | 2020</p>
                         </div>
