--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                             <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Dolf Technologies Co.</p>
                             <div
                                 class="flex items-center justify-self-end md:order-1 order-2 w-fit bg-sky-600 text-gray-50 text-xs px-2.5 py-0.5 rounded-xl mr-2 border border-gray-200">
-                                <p>COOP training</p>
+                                <p>COOP</p>
                             </div>
                             <p class="text-xs text-gray-500 order-1 md:order-2">2 months | 2022</p>
                         </div>
