--- a/index.html
+++ b/index.html
@@ -272,7 +272,36 @@
                             </div>
                             <p class="text-xs text-gray-500 order-1 md:order-2">2 months | 2022</p>
                         </div>
-                        <p>E-content development</p>
+                        <p>During the training I worked on several tasks: frontend development, full-stack development,
+                            and QA testing.</p>
+                        <p class="font-medium">Take a look of the projects I have done during the COOP:</p>
+                        <p class="flex items-center text-sky-600">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                                class="w-4 inline">
+                                <path fill-rule="evenodd"
+                                    d="M10.21 14.77a.75.75 0 01.02-1.06L14.168 10 10.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
+                                    clip-rule="evenodd" />
+                                <path fill-rule="evenodd"
+                                    d="M4.21 14.77a.75.75 0 01.02-1.06L8.168 10 4.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <a href="https://salmabader.github.io/Task1/" class="block" target="_blank">
+                                Develop E-content
+                                page</a>
+                        </p>
+                        <p class="flex items-center text-sky-600">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                                class="w-4 inline">
+                                <path fill-rule="evenodd"
+                                    d="M10.21 14.77a.75.75 0 01.02-1.06L14.168 10 10.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
+                                    clip-rule="evenodd" />
+                                <path fill-rule="evenodd"
+                                    d="M4.21 14.77a.75.75 0 01.02-1.06L8.168 10 4.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <a href="https://imasteracademy.000webhostapp.com/" class="block" target="_blank">
+                                Develop student registration system</a>
+                        </p>
 
                         <div class="grid grid-cols-2 w-full mt-6">
                             <p class="font-semibold text-yellow-700 md:col-span-1 col-span-2">Enlighten</p>
