--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <p>During the training I worked on several tasks: frontend development, full-stack development,
                             and QA testing.</p>
                         <p class="font-medium">Take a look of the projects I have done during the COOP:</p>
-                        <p class="flex items-center text-sky-600">
+                        <p class="flex items-center text-sky-600 text-sm">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
                                 class="w-4 inline">
                                 <path fill-rule="evenodd"
@@ -289,7 +289,7 @@
                                 Develop E-content
                                 page</a>
                         </p>
-                        <p class="flex items-center text-sky-600">
+                        <p class="flex items-center text-sky-600 text-sm">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
                                 class="w-4 inline">
                                 <path fill-rule="evenodd"
