--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <path fill-rule="evenodd"
                                     d="M5 10a.75.75 0 01.75-.75h6.638L10.23 7.29a.75.75 0 111.04-1.08l3.5 3.25a.75.75 0 010 1.08l-3.5 3.25a.75.75 0 11-1.04-1.08l2.158-1.96H5.75A.75.75 0 015 10z"
                                     clip-rule="evenodd" />
-                            </svg>Graduation on: August 2022</li>
+                            </svg>Graduated on: August 2022</li>
 
                     </ul>
                 </div>
