--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </header>
 
         <section class="py-2 md:border-b border-[#d8ab51]">
-            <p class="text-justify">Ambitious programer, I always strive to develop my skills and learn new
+            <p class="text-justify">Ambitious programmer, I always strive to develop my skills and learn new
                 technologies.
                 Interested in the
                 field of web and application development. I worked on the graduation project, which is an
